default-configs/tenants/gw-test/ns-shared-gw.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shared-gw
  annotations:
    configsync.gke.io/cluster-name-selector: gke-dev-us-central1-01
  labels:
    shared-gateway-access: "true"
