default-configs/tenants/gw-test/ns-store.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: store
  annotations:
    configsync.gke.io/cluster-name-selector: gke-dev-us-central1-01
  labels:
    shared-gateway-access: "true"
